# crabjudge

./: .env  .env.sample  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.dev.yaml  docker-compose.yaml
.sqlx/: query-1aafe7a1dffe3a84c186287be38a0c2dc8b4e4d323f975b2e2298057048368a5.json  query-2f9dbec0f6b60101001ed51f03afbce19e16eb82847f09a699a911125cf535be.json  query-448becb7011b6af5b082418cde0225ee12de15649362d74fdaf0019b5c250436.json  query-448ef15313d2853d9ea67210135c47cbbfef12a950ad493e1b9fafc741ab9ae9.json  query-4564ab4a97de0edf9929d45a23473f881ea39b2802ec3fecf1282792e809ac81.json  query-4946a2a1bbcfe5498eee044750cb0e2a153a68bd4f3a5fa5f8517fee5c3dade2.json  query-49f27f1d41cc201699e8d9dcdf9c15ab846ada80f5b9653b1f6533a9a9c7d5a4.json  query-4bfdd478549a08f70642ff4cf5748c97c7a65fd476fdec5304768e465f5104f4.json  query-50c3b9def01134c560bd141d75584c93d1c4b6656fdb00a5ad9dff4dbe11cf07.json  query-705b95ee3424380a66fc7db8490f8f39f251491ac0d226b2c44929018179f7dd.json  query-7796e5886096b7f7c8c26b3ed5043d892509e9fb24ef7efdea9b837313be530f.json  query-80989713cabdbccad1451b7e01b4f96179e7069c1b51b01e912e40d81f308843.json  query-86678ae5bca6c5a564bc41e529f84c56e503029f2a4b66ad7167818f20eec2d6.json  query-8e7adf7cee264e07fe67c59f5096b342a6bd9ee653a304ed51dac66793751a8e.json  query-8e7d629c8910c9f24779e1071adbd2666331611d5015ac84d5dfad0c1c4375af.json  query-9625c14045c57ff98076c43ec9b65ffa304295e12c9136b44c150682111a4d8e.json  query-9d91880dfb698aafc965842ec1a05eb8a677fcb7763f3a1b41acc07cbaa087dc.json  query-a3c368a06e270582352b1f95061f137e1b184e6bb5ac2099dbe49440209f1440.json  query-ad25819d8cb0c0d86c096c44b55e0ba4f1a5517d6133b75efedeae30eef1bf9d.json  query-d77b558abb440a92222dea3c799ec5468ced51e03cb337dbed47640756a8a629.json  query-e2a4fce0f0ccc3ed3ae78e2ee54c98598d21514324585698be8483d3528074c1.json  query-eab841f9c26a75a5e94eb7f751cbcc972e71e06c15fb6b0113bd359d5e0cbdb7.json  query-f0921e4017d8b859ce90377d28398114f384fb8d375aea955accf5b874786552.json  query-f84b15afecffb7429d44e1aa18129f82ab3ad9deb1055f3da56c1dbc96d34c62.json  query-fb3b4e01be9a5c339e654282e8f9f5a4241bc8d0bc67898c58560620c7c6c189.json
api/: Cargo.toml
api/src/: configuration.rs  lib.rs  main.rs  settings.rs  startup.rs
api/src/routes/: login.rs  mod.rs  problems.rs  role.rs  session.rs  signup.rs  signup_confirmation.rs  stats.rs  status.rs  submissions.rs  submit.rs
api/src/routes/create_problem/: post.rs
api/tests/: login.rs  submit.rs  utils.rs
config_loader/: Cargo.toml
config_loader/src/: lib.rs
config_loader_derive/: Cargo.toml
config_loader_derive/src/: lib.rs
configuration/: base.yaml  local.yaml
configuration/local/: apiconfig.yaml  databaseconfig.yaml  emailclientconfig.yaml  rabbitmqconfig.yaml  redisconfig.yaml  runtimeconfigs.yaml
migrations/: 20251017083426_create_user_table.sql  20251112092312_problems.sql  20251122165604_seed_problem.sql  20251123105326_submit_status.sql  20251204104707_add_role_in_user_table.sql  20260205122300_descriptive_problem.sql  20260205122643_update_seed_problem.sql  20260206075240_update_problem_status.sql  20260217125608_user_pending_status.sql  20260217131644_user_email_add.sql  20260218160253_verification.sql
models/: Cargo.toml
models/src/: email.rs  exec.rs  lib.rs  utils.rs
scripts/: init_db.sh  init_redis.sh
worker/: Cargo.toml
worker/configuration/: base.yaml
worker/src/: configuration.rs  docker.rs  error.rs  executer.rs  lib.rs  main.rs  pool.rs  settings.rs
worker/tests/: verify_output.rs
