[workspace]
resolver = "3"
members = ["api", "worker", "models"]

[workspace.dependencies]
validator = { version = "0.20", features = ["derive"] }
lapin = "3.7.2"
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
config = "0.15.18"
anyhow = "1.0.100"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }

[workspace.dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[workspace.dependencies.reqwest]
version = "0.12.24"
default-features = false
features = ["json", "rustls-tls", "cookies"]
