[package]
name = "api"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"


[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
actix-cors = "0.7.1"
actix-session = { version = "0.11.0", features = ["redis-session"] }
actix-web = "4.11.0"
anyhow = "1.0.100"
argon2 = "0.5.3"
base64 = "0.22.1"
config = "0.15.18"
lapin = "3.7.2"
models = { version = "0.1.0", path = "../models" }
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }


[dependencies.uuid]
version = "1.18.1"
features = ["v4"]

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
futures-util = "0.3.31"
reqwest = { version = "0.12.24", features = ["cookies", "json"]}
serde_json = "1.0.145"
