[package]
name = "api"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"


[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
actix-cors = "0.7.1"
actix-session = { version = "0.11.0", features = ["redis-session"] }
actix-web = "4.11.0"
argon2 = "0.5.3"
base64 = "0.22.1"
models = { version = "0.1.0", path = "../models" }
lapin = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
config = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }
rand = "0.10.0"
actix-limitation = "0.5.1"
validator = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }


[dependencies.uuid]
version = "1.18.1"
features = ["v4"]

[dev-dependencies]
futures-util = "0.3.31"
