[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "worker"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
bollard = "0.19.3"
config = "0.15.19"
config_loader = { version = "0.1.0", path = "../config_loader" }
deadpool = "0.12.3"
futures = "0.3.31"
futures-util = "0.3.31"
lapin = "3.7.2"
models = { version = "0.1.0", path = "../models" }
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
anyhow = "1.0.100"
