[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "worker"
path = "src/main.rs"

[dependencies]
anyhow = {workspace = true}
bollard = "0.19.3"
config = {workspace = true}
config_loader = { version = "0.1.0", path = "../config_loader" }
deadpool = "0.12.3"
futures = "0.3.31"
futures-util = "0.3.31"
lapin = {workspace = true}
models = { version = "0.1.0", path = "../models" }
serde = {workspace = true}
serde_json = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
sqlx = {workspace = true}



[dev-dependencies]
